# mvnb

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  build.py  package.json  pyproject.toml  setup.cfg  setup.py  tsconfig.json
.github/workflows/: check.yml  ghcr.yml  make-check.yml  test.yml
mvnb/: __main__.py  _bootstrap.py  _preprocessor.py  bidict.py  client.py  command.py  config.py  console.py  data.py  handler.py  message.py  notebook.py  option.py  output.py  payload.py  pipeline.py  queue.py  reader.py  record.py  request.py  response.py  server.py  worker.py
mvnb-gui/: index.html  package.json  tsconfig.json  yarn
mvnb-gui/src/: app.tsx  board.tsx  cell.tsx  client.ts  controls.tsx  index.css  index.html  index.tsx  message.ts  panel.tsx  state.ts  types.ts  websocket.ts
mvnb/cui/: __main__.py  client.py  command.py  console.py
mvnb/data/: data.py  message.py  model.py  notebook.py  output.py  request.py  response.py
mvnb/model/: data.py
mvnb/server/: __main__.py  config.py  pipeline.py  server.py  worker.py
mvnb/util/: _record.py  config.py  option.py  record.py
script/: generate-vscode-settings.py
src/: client.py  command.py  console.py  data.py  server.py  worker.py
src/cui/: command.py
src/server/: server.py  worker.py
src/util/: _bootstrap.py  config.py
test/: conftest.py  test_config.py  test_data.py  test_main.py  test_mvnb.py  test_option.py  test_queue.py  test_record.py  test_server.py  test_util_option.py  test_util_record.py  util.py
