[build-system]
build-backend = "pdm.pep517.api"
requires = ["pdm-pep517>=1.0.0"]

[project]
name = "mvnb"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
  "bidict>=0.22.0",
  "tornado>=6.2.0",
]

[project.scripts]
mvnb = "mvnb.__main__:main"

[tool.pdm.build]
setup-script = "build.py"

[tool.pdm.dev-dependencies]
dev = [
  "flake8",
  "flake8-black",
  "flake8-pyproject",
  "flake8-tidy-imports",
  "black",
  "isort",
  "pytest",
  "pytest-cov",
  "pytest-asyncio",
  "pytest-timeout",
]

[tool.pdm.scripts.format]
composite = [
  "black --quiet build.py mvnb test",
  "isort build.py mvnb test",
]

[tool.pdm.scripts.lint]
composite = [
  "flake8 build.py mvnb test",
  "black --quiet --check build.py mvnb test",
  "isort --check-only build.py mvnb test",
]

[tool.pdm.scripts.test]
composite = [
  "pytest --cov --cov-report=term --cov-report=xml"
]

[tool.coverage.run]
branch = true
data_file = ".coverage/.coverage"
source = ["mvnb"]

[tool.isort]
profile = "black"
src_paths = ["mvnb", "test"]

[tool.flake8]
ban-relative-imports = true
max-line-length = 88

[tool.pytest.ini_options]
addopts = "-vv"
filterwarnings = "error"
timeout = 1
